--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "./index.js",
+            "dest": "/",
             "methods": [
                 "GET",
                 "POST",
@@ -24,7 +24,9 @@
                 "OPTIONS"
             ],
             "headers": {
-                "Access-Control-Allow-Origin": "*"
+                "Access-Control-Allow-Origin": "https://noyo.vercel.app",
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
             }
         }
     ]
